# contextops

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/adapters/: in_memory_event_bus.rs  in_memory_repository.rs  in_memory_search.rs  mod.rs  passthrough_validator.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/entities/: context_artifact.rs  context_format.rs  mod.rs
crates/domain/src/events/: mod.rs
crates/domain/src/ports/: event_bus.rs  mod.rs  repository.rs  schema_validator.rs  search_index.rs
crates/domain/src/value_objects/: content_hash.rs  context_tier.rs  mod.rs  vaid.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/mcp-server/src/protocol/: mod.rs
crates/mcp-server/src/resources/: mod.rs
crates/mcp-server/src/server/: mod.rs
crates/mcp-server/src/tools/: mod.rs
crates/mcp-server/tests/: integration_mcp.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/src/application/commands/: mod.rs  run_pipeline.rs
crates/pipeline/src/application/dtos/: mod.rs
crates/pipeline/src/application/queries/: get_pipeline_run.rs  mod.rs
crates/pipeline/src/domain/entities/: blast_radius.rs  mod.rs  pipeline.rs  pipeline_run.rs
crates/pipeline/src/domain/ports/: mod.rs  pipeline_repository.rs  stage_executor.rs
crates/pipeline/src/domain/services/: dag_orchestrator.rs  mod.rs
crates/pipeline/src/infrastructure/: container.rs  executors.rs  mod.rs  repositories.rs
crates/pipeline/tests/: integration_pipeline.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/registry/src/application/commands/: create_version.rs  deprecate_artifact.rs  mod.rs  register_artifact.rs
crates/registry/src/application/dtos/: mod.rs
crates/registry/src/application/queries/: get_artifact.rs  list_artifacts.rs  mod.rs  resolve_context.rs  search_artifacts.rs
crates/registry/src/domain/services/: inheritance_resolver.rs  mod.rs
crates/registry/src/infrastructure/: container.rs
crates/registry/tests/: integration_registry.rs
