[workspace]
members = [
    "crates/domain",
    "crates/registry",
    "crates/pipeline",
    "crates/mcp-server",
    "crates/cli",
    "crates/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Smeyatsky Labs"]
license = "Apache-2.0"
repository = "https://github.com/smeyatsky-labs/contextops"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identity and hashing
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
mockall = "0.13"

# Workspace crates
contextops-domain = { path = "crates/domain" }
contextops-registry = { path = "crates/registry" }
contextops-pipeline = { path = "crates/pipeline" }
contextops-mcp-server = { path = "crates/mcp-server" }
contextops-common = { path = "crates/common" }
