[package]
name = "contextops-common"
description = "Shared infrastructure utilities for ContextOps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contextops-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
