[package]
name = "contextops-mcp-server"
description = "MCP protocol layer for ContextOps — agent-facing context retrieval and management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contextops-domain = { workspace = true }
contextops-registry = { workspace = true }
contextops-pipeline = { workspace = true }
contextops-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
