[package]
name = "contextops-pipeline"
description = "M2 Context Pipeline — DAG-based CI/CD for context artifacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contextops-domain = { workspace = true }
contextops-registry = { workspace = true }
contextops-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
