[package]
name = "contextops-registry"
description = "M1 Context Registry — canonical store for versioned context artifacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contextops-domain = { workspace = true }
contextops-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
